[gd_scene load_steps=6 format=3 uid="uid://dqdv1dvpasyd"]

[ext_resource type="Script" uid="uid://b5o6vajgbtx03" path="res://Main/Menus/main_menu.gd" id="1_tofsu"]
[ext_resource type="Texture2D" uid="uid://bfsra60mc5svj" path="res://Assets/Logo.png" id="3_ol107"]
[ext_resource type="Theme" uid="uid://d2ltakj580awj" path="res://MainTheme.tres" id="3_ryd52"]
[ext_resource type="PackedScene" uid="uid://bnd0uic0px8a8" path="res://Assets/Themes/Scenes/SoundButton.tscn" id="4_a8qpw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a8qpw"]
bg_color = Color(0.6755825, 0.71932274, 0.60634255, 1)

[node name="MainMenu" type="Control"]
process_mode = 1
layout_mode = 3
anchors_preset = 0
theme = ExtResource("3_ryd52")
script = ExtResource("1_tofsu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -10.0
offset_top = -11.0
offset_right = 1171.0
offset_bottom = 672.0
theme_override_styles/panel = SubResource("StyleBoxFlat_a8qpw")

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 73.0
offset_top = 444.0
offset_right = 212.0
offset_bottom = 526.0
text = "Editor"

[node name="Gallery" parent="." instance=ExtResource("4_a8qpw")]
visible = false
layout_mode = 0
offset_left = 69.0
offset_top = 250.0
offset_right = 179.0
offset_bottom = 331.0
size_flags_horizontal = 3
text = "Gallery"

[node name="MainPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 467.0
offset_right = 696.0
offset_bottom = 548.0
theme = ExtResource("3_ryd52")

[node name="Play" parent="MainPanel" instance=ExtResource("4_a8qpw")]
layout_mode = 2
size_flags_horizontal = 3
text = "Play"

[node name="SystemPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 929.0
offset_top = 45.0
offset_right = 1107.0
offset_bottom = 195.0

[node name="VBoxContainer" type="VBoxContainer" parent="SystemPanel"]
layout_mode = 2

[node name="Settings" parent="SystemPanel/VBoxContainer" instance=ExtResource("4_a8qpw")]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
text = "Settings"

[node name="Stats" parent="SystemPanel/VBoxContainer" instance=ExtResource("4_a8qpw")]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
text = "Player"

[node name="PlayerPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 45.0
offset_top = 453.0
offset_right = 223.0
offset_bottom = 603.0

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerPanel"]
layout_mode = 2

[node name="Customization" type="Button" parent="PlayerPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
text = "Customization"

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(576, 200)
scale = Vector2(0.35, 0.35)
texture = ExtResource("3_ol107")

[connection signal="pressed" from="MainPanel/Play" to="." method="open_floor"]
[connection signal="pressed" from="SystemPanel/VBoxContainer/Settings" to="." method="open_popup" binds= ["res://Main/Menus/SettingsMenu.tscn"]]
[connection signal="pressed" from="SystemPanel/VBoxContainer/Stats" to="." method="open_profile"]
